--- a/2. Godina/CS130 - C-C++ programski jezik/Domaci/DZ02/CS130-DZ02-PetarOtovic5460/DZ02/DZ02/DZ02.vcxproj
+++ b/2. Godina/CS130 - C-C++ programski jezik/Domaci/DZ02/CS130-DZ02-PetarOtovic5460/DZ02/DZ02/DZ02.vcxproj
@@ -128,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DZ02.cpp" />
+    <ClCompile Include="Zadatak1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
