--- a/2. Godina/CS130 - C-C++ programski jezik/Domaci/DZ02/CS130-DZ02-PetarOtovic5460/DZ02/DZ02/DZ02.vcxproj.filters
+++ b/2. Godina/CS130 - C-C++ programski jezik/Domaci/DZ02/CS130-DZ02-PetarOtovic5460/DZ02/DZ02/DZ02.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DZ02.cpp">
+    <ClCompile Include="Zadatak1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
