--- a/2. Godina/CS203 - Algoritmi i strukture podataka/CS203-PZ1-PetarOtovic5460/pom.xml
+++ b/2. Godina/CS203 - Algoritmi i strukture podataka/CS203-PZ1-PetarOtovic5460/pom.xml
@@ -74,6 +74,10 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <source>19</source>
+                    <target>19</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
